# ebook-enricher

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/superpowers/plans/: 2026-04-16-ebook-metadata-enricher.md  2026-05-30-cover-replacement.md  2026-05-30-format-selection-and-cleanup.md  2026-05-31-editions-fallback.md  2026-06-02-canonical-edition-preference.md  2026-06-02-series-normalisation.md
docs/superpowers/specs/: 2026-04-16-ebook-metadata-enricher-design.md  2026-05-30-cover-replacement-design.md  2026-05-30-format-selection-and-cleanup-design.md  2026-05-31-add-cover-when-missing-design.md  2026-05-31-editions-fallback-design.md  2026-06-02-canonical-edition-preference-design.md  2026-06-02-series-normalisation-design.md
ebook_enricher/: cover.py  enrich.py  epub_meta.py  hardcover.py  matcher.py  server.py  status_epub.py  status_tracker.py
examples/: process-ebook.sh
scripts/: cleanup-duplicates.py  format_selector.py  process-ebook.py  process-ebook.sh
tests/: conftest.py  test_cleanup_duplicates.py  test_cover.py  test_enrich.py  test_epub_meta.py  test_format_selector.py  test_hardcover.py  test_matcher.py  test_process_ebook.py  test_server.py  test_status_epub.py  test_status_tracker.py
