[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ebook-enricher"
version = "0.1.0"
description = "EPUB metadata enricher using Hardcover GraphQL API"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "httpx==0.28.0",
    "rapidfuzz==3.10.1",
    "pydantic==2.10.2",
    "defusedxml==0.7.1",
]

[project.optional-dependencies]
test = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "respx==0.22.0",
]

[tool.hatch.build.targets.wheel]
packages = ["ebook_enricher"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["scripts"]
